CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(game_server)

ADD_DEFINITIONS("-std=c++11")

SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g3")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

AUX_SOURCE_DIRECTORY(src SRC_MAIN)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/include
)

LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/lib
)

LINK_LIBRARIES(
    mzx
)

SET(SRC_LIST
    ${SRC_MAIN}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
