CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(game_server)

ADD_DEFINITIONS("-std=c++11")

SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g3")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

AUX_SOURCE_DIRECTORY(src SRC_MAIN)
AUX_SOURCE_DIRECTORY(src/ecs/component SRC_ECS_COMPONENT)
AUX_SOURCE_DIRECTORY(src/ecs/entity SRC_ECS_ENTITY)
AUX_SOURCE_DIRECTORY(src/ecs/entity_system SRC_ECS_ENTITY_SYSTEM)
AUX_SOURCE_DIRECTORY(src/ecs/event SRC_ECS_EVENT)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/../include
    ${PROJECT_SOURCE_DIR}/src
)

LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/../lib
)

LINK_LIBRARIES(
    mzx
)

SET(SRC_LIST
    ${SRC_MAIN}
    ${SRC_ECS_COMPONENT}
    ${SRC_ECS_ENTITY}
    ${SRC_ECS_ENTITY_SYSTEM}
    ${SRC_ECS_EVENT}
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
