CMAKE_MINIMUM_REQUIRED(VERSION 3.5.1)

PROJECT(game_server)

SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g3")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/src
    ${PROJECT_SOURCE_DIR}/../third_party/mzx/include
)

LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/../lib
    ${PROJECT_SOURCE_DIR}/../third_party/mzx/lib
)

LINK_LIBRARIES(
    mzx
)

FILE(GLOB_RECURSE SRC_LIST
    "${PROJECT_SOURCE_DIR}/src/*.cpp"
    "${PROJECT_SOURCE_DIR}/src/*.cxx"
    "${PROJECT_SOURCE_DIR}/src/*.cc"
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
